# mlb-rankings

./: .gitignore  BETTING_AGENT.md  CLAUDE.md  Dockerfile  GEMINI.md  HOLY_GRAIL.md  NEXT_STEPS_PLAN.md  PROJECT_SNIPER.md  PROJECT_SNIPER_MISSION.md  ROADMAP.md  VISION.md  VISION_1.md  check_odds.py  docker-compose.yml  halt-reason.md  inspect_box.py  inspect_mlb_ids.py  main.py  next-steps.md  pyproject.toml  review.md  start-dev.sh  test_backend_automation.py  test_sportsdata.py  verify_betting.py  verify_sim.py
app/: app.py
app/services/: betting_analyzer.py  bullpen_history_service.py  data_processor.py  database_manager.py  defense_monitor.py  forecasting_model.py  game_replay_service.py  latency_monitor.py  live_game_service.py  market_simulator.py  markov_chain_service.py  (+9 more)
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
data/: mlb_data.db
plans/: risk-mitigation-20260120.md
scripts/: calibrate_sniper.py  check_schema.py  debug_db.py  demo_markov.py  explore_live_data.py  hunt_overreactions.py  init_db_trigger.py  measure_latency_baseline.py  populate_db.py  run_shadow_backtest.py  run_shadow_campaign.py  settle_shadow_bets.py  test_frontend_logic.js  verify_deep_layer.py  verify_deployment.py  verify_season_sim.py
tests/: test_app.py  test_betting_analyzer.py  test_bullpen_history.py  test_latency_integration.py  test_latency_monitor.py  test_markov_chain_service.py  test_markov_integration.py  test_markov_performance.py  test_sim_performance.py  test_state_engine.py  test_tier1_signal.py  test_trader_agent.py
(+18 files in other folders)
